--- a/WPF/EmployeeDashboard.xaml
+++ b/WPF/EmployeeDashboard.xaml
@@ -4,8 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPF"
+        WindowStartupLocation="CenterScreen"
         mc:Ignorable="d"
-        Title="EmployeeDashboard" Height="450" Width="800">
+        Title="AdminDashboard" Height="800" Width="1500">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="80"/>
@@ -13,13 +14,11 @@
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Row="0" Background="OrangeRed" Orientation="Horizontal">
-            <Label Content="Employee Dashboard" Margin="10" FontWeight="Bold" FontSize="16" Foreground="White" />
+            <Label Content="Admin Dashboard" Margin="10" FontWeight="Bold" FontSize="16" Foreground="White" />
             <StackPanel Orientation="Horizontal" Height="30" Width="auto">
-                <Button Content="Chấm công" Width="120" Margin="0 0 10 0"/>
                 <Button Content="Báo cáo nhân công" Width="120" Margin="0 0 10 0" Click="ReportEmployee_Click"/>
-                <Button Content="Báo cáo lương thưởng" Width="130" Margin="0 0 10 0"/>
-                <Button Content="Profile" Width="120" Margin="0 0 10 0"/>
-                <Button Content="Đăng xuất" Width="120" Margin="0 0 10 0"/>
+                <Button x:Name="QuanLyPhongBan_btn" Content="Quản Lý Phòng Ban" Width="120" Margin="0 0 10 0" Click="QuanLyPhongBan_btn_Click"/>
+                <Button Content="Đăng xuất" Width="120" Margin="0 0 10 0" Click="Button_Click"/>
             </StackPanel>
         </StackPanel>
         <GroupBox Grid.Row="1" Margin="10" BorderThickness="3" BorderBrush="Black" Padding="5">
