--- a/WPF/EmployeeDashboard_Huy.xaml
+++ b/WPF/EmployeeDashboard_Huy.xaml
@@ -17,7 +17,7 @@
                 <Button Content="Báo Cáo Chấm Công" Margin="20,0,0,0"  Click="BaoCaoChamCong_Click" Width="130"/>
                 <Button Content="Báo Cáo Lương Thưởng"  Margin="20,0,0,0" Click="BaoCaoLuong_Click" Width="130"/>
                 <Button Content="Profile" Margin="20,0,0,0" Click="Profile_Click" Width="79"/>
-                <Button Content="Thông Báo" Margin="20,0,0,0" Width="79"/>
+                <Button Content="Thông Báo" Margin="20,0,0,0" Width="79" Click="Notification_Click"/>
                 <Button Content="🔑 Đăng Xuất" Margin="20,0,0,0" Click="Logout_Click" Width="110"/>
             </StackPanel>
         </DockPanel>
